# di_done_right

./: .flake8  .gitignore  DOCS_INDEX.md  DOCUMENTATION.md  GITHUB_ENVIRONMENT_SETUP.md  LICENSE  MANIFEST.in  PUBLISHING_GUIDE.md  QUICK_REFERENCE.md  README.md  USER_EXPERIENCE.md  build_test.py  pyproject.toml  user_experience_demo.py
.github/: copilot-instructions.md
.github/workflows/: test-and-publish.yml
di_container/: __init__.py  container.py  enums.py  exceptions.py  fastapi_integration.py  registration.py  service_provider.py
examples/: advanced_usage.py  basic_usage.py  comprehensive_example.py  concrete_types_usage.py  fastapi_example.py  keyed_services_usage.py  static_container_usage.py
tests/: test_container.py  test_registration.py  test_service_provider.py
