[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/tomlazelle/di_done_right"
repository = "https://github.com/tomlazelle/di_done_right"
documentation = "https://github.com/tomlazelle/di_done_right#documentation"

[project]
name = "di-done-right"
dynamic = ["version"]
description = "A modern dependency injection framework for Python inspired by .NET DI"
authors = [{name = "Tom Lazelle", email = "tomlazelle@yahoo.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["dependency-injection", "di", "ioc", "inversion-of-control", "dotnet", "fastapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]
fastapi = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["di_container*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
